--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="allTheNumbers"></div>
 
 <!-- <script src="main.js"></script>     -->
-<script src="functions.js"></script> 
+<!-- <script src="functions.js"></script>  -->
+<script src="challenge.js"></script>
 </body>
 </html>
